add a for you endpoint and enable a user to chat using amharic also
